--- a/servermessages/messages.cfg
+++ b/servermessages/messages.cfg
@@ -2,46 +2,46 @@
 00:30:00~ Restart in 30 min.
 00:50:00~ Restart in 10 min.
 00:55:00~ Restart in 5 min. Please logout now.
-00:57:00~ Restart in 3 min. Please logout now. If you haven yet.
-00:59:00~ Restart in 1 min. It is not to late på logout.
+00:57:00~ Restart in 3 min. Please logout now. If you haven't yet.
+00:59:00~ Restart in 1 min. It is not too late to logout.
 01:00:00~ Restarting
 
 04:00:00~ Restart in 60 min.
 04:30:00~ Restart in 30 min.
 04:50:00~ Restart in 10 min.
 04:55:00~ Restart in 5 min. Please logout now.
-04:57:00~ Restart in 3 min. Please logout now. If you haven yet.
-04:59:00~ Restart in 1 min. It is not to late på logout.
+04:57:00~ Restart in 3 min. Please logout now. If you haven't yet.
+04:59:00~ Restart in 1 min. It is not too late to logout.
 05:00:00~ Restarting
 
 08:00:00~ Restart in 60 min.
 08:30:00~ Restart in 30 min.
 08:50:00~ Restart in 10 min.
 08:55:00~ Restart in 5 min. Please logout now.
-08:57:00~ Restart in 3 min. Please logout now. If you haven yet.
-08:59:00~ Restart in 1 min. It is not to late på logout.
+08:57:00~ Restart in 3 min. Please logout now. If you haven't yet.
+08:59:00~ Restart in 1 min. It is not too late to logout.
 09:00:00~ Restarting
 
 12:00:00~ Restart in 60 min.
 12:30:00~ Restart in 30 min.
 12:50:00~ Restart in 10 min.
 12:55:00~ Restart in 5 min. Please logout now.
-12:57:00~ Restart in 3 min. Please logout now. If you haven yet.
-12:59:00~ Restart in 1 min. It is not to late på logout.
+12:57:00~ Restart in 3 min. Please logout now. If you haven't yet.
+12:59:00~ Restart in 1 min. It is not too late to logout.
 13:00:00~ Restarting
 
 16:00:00~ Restart in 60 min.
 16:30:00~ Restart in 30 min.
 16:50:00~ Restart in 10 min.
 16:55:00~ Restart in 5 min. Please logout now.
-16:57:00~ Restart in 3 min. Please logout now. If you haven yet.
-16:59:00~ Restart in 1 min. It is not to late på logout.
+16:57:00~ Restart in 3 min. Please logout now. If you haven't yet.
+16:59:00~ Restart in 1 min. It is not too late to logout.
 17:00:00~ Restarting
 
 20:00:00~ Restart in 60 min.
 20:30:00~ Restart in 30 min.
 20:50:00~ Restart in 10 min.
 20:55:00~ Restart in 5 min. Please logout now.
-20:57:00~ Restart in 3 min. Please logout now. If you haven yet.
-20:59:00~ Restart in 1 min. It is not to late på logout.
+20:57:00~ Restart in 3 min. Please logout now. If you haven't yet.
+20:59:00~ Restart in 1 min. It is not too late to logout.
 21:00:00~ Restarting
